# quantum-simulator

./: .gitignore  DEV.md  README.md  pyproject.toml
src/quantum-simulator/: gate.py  main.py  qubit.py
src/quantumsimulator/: algorithm.py  gate.py  gates.py  main.py  operator.py  operators.py  qubit.py  register.py  tensor.py  types.py
tests/: qubit_test.py
tests/quantumsimulator/: conftests.py  gate_test.py  qubit_test.py  test_algorithm.py  test_gate.py  test_gates.py  test_operator.py  test_operators.py  test_register.py
