[project]
name = "quantum-simulator"
version = "0.1.0"
description = ""
authors = [
    { name = "Lukas Vauvert" },
    { name = "Guillaume Vauvert" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
]

[tool.poetry]
package-mode = false # used for dependency but not for packaging
packages = [{ include = "quantumsimulator", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
